Fix text alignment

--- a/style.scss
+++ b/style.scss
@@ -23,11 +23,6 @@ body {
   color: $darkGray;
 }
 
-.page {
-  text-align: justify;
-  text-align-last: justify;
-}
-
 .container {
   margin: 0 auto;
   max-width: 740px;
@@ -71,6 +66,7 @@ h4 {
 
 p {
   margin: 15px 0;
+  text-align: justify;
 }
 
 a {
